# uv_boilerbase

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: app.py  config.py  layouts.json  models.py  monitoring_agent.py  routes.py
backend/instance/: events.db
frontend/: package-lock.json  package.json
frontend/minimal-react-app/: package-lock.json  package.json
frontend/minimal-react-app/src/: App.js
frontend/minimal-react-app/src/components/: EventForm.js  EventList.js  ToggleButton.css  ToggleButton.js
src/flow_capture/: wsgi.py
tests/: test_flow_capture_e2e.py
utilities/: highlight_helper.py  setup_files.py
